--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color:  #636FA4;
+$secondary-color: #8CA6DB;
 
 $white-color: #fff;
 
